k8s/shaderplayground/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shaderplayground
  namespace: shaderplayground
spec:
  selector:
    app: shaderplayground
  ports:
    - port: 80
      targetPort: 80
