k8s/shaderplayground/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shaderplayground
  namespace: shaderplayground
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth-authentik@kubernetescrd
    traefik.ingress.kubernetes.io/router.priority: "1"
spec:
  ingressClassName: traefik-helm
  rules:
    - host: shaderplayground.robschwe.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shaderplayground
                port:
                  number: 80
